Update team member roles and affiliations
Signed-off-by: Chirag Patel <105613466+chiragpatel269@users.noreply.github.com>

--- a/team.html
+++ b/team.html
@@ -47,15 +47,13 @@
         <div class="team-card animate-fade-up">
           <div class="team-avatar">👨‍🔬</div>
           <h3>Dr. Chirag N. Patel</h3>
-          <div class="role">Co-Founder & CEO</div>
-          <div class="affiliation">Indrashil University, India</div>
-          <p>Leading expert in computational drug discovery with extensive experience in quantum chemistry-based molecular modeling. Published researcher with deep expertise in DFT calculations and AI-driven drug discovery pipelines.</p>
+          <div class="affiliation">Special Scientist, National Institute of Aging, NIH, USA.</div>
+          <p>Leading expert in computational drug discovery with extensive experience in quantum chemistry-based molecular modeling. Published research with deep expertise in DFT calculations and AI-driven drug discovery pipelines.</p>
         </div>
         <div class="team-card animate-fade-up delay-1">
           <div class="team-avatar">👨‍💻</div>
           <h3>Dr. Krunal M. Modi</h3>
-          <div class="role">Co-Founder & CTO</div>
-          <div class="affiliation">Indrashil University, India</div>
+          <div class="affiliation"> International Marketing Manager, n-revival pharma chem, India.</div>
           <p>Computational chemistry innovator specializing in molecular dynamics, free energy calculations, and machine learning integration for drug discovery applications. Expert in QM/MM methodology and protein-ligand interaction analysis.</p>
         </div>
       </div>
