Fix image source in hero section
Signed-off-by: Chirag Patel <105613466+chiragpatel269@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <!-- HERO -->
   <section class="hero">
     <div class="hero-bg-overlay"></div>
-    <img src="assets/1" alt="Quantum molecular visualization" class="1.img" />
+    <img src="assets/1.jpg" alt="Quantum molecular visualization" class="1.img" />
     <div class="hero-orbs">
       <div class="orb orb-1"></div>
       <div class="orb orb-2"></div>
