--- a/contact.html
+++ b/contact.html
@@ -48,14 +48,14 @@
             <div class="contact-method-icon">📧</div>
             <div>
               <h4>Email Us Directly</h4>
-              <p>info@tattvasim.com</p>
+              <p>tattvasim@outlook.com</p>
             </div>
           </div>
           <div class="contact-method">
             <div class="contact-method-icon">🏛️</div>
             <div>
               <h4>Based At</h4>
-              <p>Indrashil University, India</p>
+              <p>Ahmedabad, India</p>
             </div>
           </div>
           <div class="contact-method">
@@ -67,11 +67,7 @@
           </div>
           <div class="contact-method">
             <div class="contact-method-icon">⏱️</div>
-            <div>
-              <h4>Response Time</h4>
-              <p>Detailed proposal within 48 hours</p>
             </div>
-          </div>
         </div>
 
         <div class="contact-form" id="contactForm">
