--- a/contact.html
+++ b/contact.html
@@ -65,6 +65,8 @@
               <p>Partnerships across 3 continents</p>
             </div>
           </div>
+          
+          <!-- RIGHT: Form -->
           <div class="contact-form" id="contactForm">
           <h3>Send Us a Message</h3>
           <div class="form-grid">
