Fix HTML structure by closing a div tag
Signed-off-by: Chirag Patel <105613466+chiragpatel269@users.noreply.github.com>

--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
               <p>Partnerships across 3 continents</p>
             </div>
           </div>
-          
+          </div>
           <!-- RIGHT: Form -->
           <div class="contact-form" id="contactForm">
           <h3>Send Us a Message</h3>
