--- a/contact.html
+++ b/contact.html
@@ -66,50 +66,52 @@
             </div>
           </div>
           </div>
-          <!-- RIGHT: Form -->
-          <div class="contact-form" id="contactForm">
+        <!-- RIGHT: Form -->
+        <div class="contact-form" id="contactForm">
           <h3>Send Us a Message</h3>
-          <div class="form-grid">
-            <div style="display:grid; grid-template-columns:1fr 1fr; gap:1.25rem;">
-              <div class="form-group">
-                <label for="firstName">First Name</label>
-                <input type="text" id="firstName" placeholder="Your first name" />
-              </div>
-              <div class="form-group">
-                <label for="lastName">Last Name</label>
-                <input type="text" id="lastName" placeholder="Your last name" />
-              </div>
+
+          <div class="form-row">
+            <div class="form-group">
+              <label for="firstName">First Name</label>
+              <input type="text" id="firstName" placeholder="First name" />
             </div>
             <div class="form-group">
-              <label for="email">Email Address</label>
-              <input type="email" id="email" placeholder="Enter your email" />
+              <label for="lastName">Last Name</label>
+              <input type="text" id="lastName" placeholder="Last name" />
             </div>
-            <div class="form-group">
-              <label for="company">Company / Institution</label>
-              <input type="text" id="company" placeholder="Your organization" />
-            </div>
-            <div class="form-group">
-              <label for="service">Service of Interest</label>
-              <select id="service">
-                <option value="">Select a service...</option>
-                <option>DFT & QED Calculations</option>
-                <option>Quantum Molecular Modeling</option>
-                <option>AI-Powered Modeling</option>
-                <option>ADMET Predictions</option>
-                <option>Molecular Simulations</option>
-                <option>Custom Pipelines</option>
-                <option>Other / Multiple</option>
-              </select>
-            </div>
-            <div class="form-group">
-              <label for="message">Project Description</label>
-              <textarea id="message" rows="5" placeholder="Describe your project, targets of interest, and timeline..."></textarea>
-            </div>
-            <button onclick="submitForm()" class="btn-primary" style="width:100%; justify-content:center; padding: 0.875rem;">
-              Send Message
-            </button>
-            <p class="form-note">By submitting, you agree to our <a href="#">Privacy Policy</a>. We respond within 48 hours.</p>
           </div>
+
+          <div class="form-group">
+            <label for="email">Email Address</label>
+            <input type="email" id="email" placeholder="your@email.com" />
+          </div>
+
+          <div class="form-group">
+            <label for="company">Company / Institution</label>
+            <input type="text" id="company" placeholder="Your organization" />
+          </div>
+
+          <div class="form-group">
+            <label for="service">Service of Interest</label>
+            <select id="service">
+              <option value="">Select a service...</option>
+              <option>DFT & QED Calculations</option>
+              <option>Quantum Molecular Modeling</option>
+              <option>AI-Powered Modeling</option>
+              <option>ADMET Predictions</option>
+              <option>Molecular Simulations</option>
+              <option>Custom Pipelines</option>
+              <option>Other / Multiple</option>
+            </select>
+          </div>
+
+          <div class="form-group">
+            <label for="message">Project Description</label>
+            <textarea id="message" rows="5" placeholder="Describe your project, targets of interest, and timeline..."></textarea>
+          </div>
+
+          <button class="form-submit" onclick="submitForm()">Send Message →</button>
+          <p class="form-note">By submitting, you agree to our <a href="#">Privacy Policy</a>. We respond within 48 hours.</p>
         </div>
 
         <div class="contact-form" id="successMessage" style="display:none; text-align:center; padding:3rem 2rem;">
