--- a/index.html
+++ b/index.html
@@ -68,23 +68,13 @@
   <section class="hero">
     <div class="hero-bg-overlay"></div>
     <img src="assets/1.jpg" alt="Quantum molecular visualization" class="hero-bg-img" onerror="this.style.display='none'" />
-    <div class="hero-orbs">
-      <div class="orb orb-1"></div>
-      <div class="orb orb-2"></div>
-      <div class="orb orb-3"></div>
-    </div>
-    <div class="hero-dots">
-      <div class="dot dot-accent"></div>
-      <div class="dot dot-signal"></div>
-      <div class="dot dot-highlight"></div>
-    </div>
     <div class="hero-content">
       <div class="hero-badge animate-fade-up">Next-Generation Computational Chemistry</div>
-      <h1 class="hero-title animate-fade-up delay-1">
+      <div class="hero-badge animate-fade-up" style="color:rgba(255,255,255,0.9);">
         Quantum-Powered Discovery for the<br/>
         <span class="gradient-text">Quantum Drug Discovery</span>
       </h1>
-      <p class="hero-subtitle animate-fade-up delay-2">
+      <p class="hero-subtitle animate-fade-up delay-2" style="color:rgba(255,255,255,0.85);">
         Harness the precision of quantum chemistry and AI-driven modeling to accelerate your drug discovery pipeline. From DFT calculations to ADMET predictions, we deliver actionable molecular insights.
       </p>
       <div class="hero-actions animate-fade-up delay-3">
