--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <a href="services.html" class="btn-accent">Explore Services</a>
         <a href="contact.html" class="btn-outline-white">Discuss Your Project</a>
       </div>
-      <div class="animate-float" style="display:flex; flex-direction:column; align-items:flex-start; gap:0.5rem; color:rgba(255,255,255,0.5); font-size:0.72rem; letter-spacing:0.12em; text-transform:uppercase;">
+      <div class="animate-float" style="display:flex; flex-direction:column; align-items:center; margin: 0 auto; gap:0.5rem; color:rgba(255,255,255,0.5); font-size:0.72rem; letter-spacing:0.12em; text-transform:uppercase;">
         <span>Scroll</span>
         <div style="width:1px; height:3rem; background:linear-gradient(to bottom,rgba(255,255,255,0.5),transparent);"></div>
       </div>
