--- a/services.html
+++ b/services.html
@@ -43,7 +43,7 @@
         <div>
           <div class="section-label">Quantum Chemistry</div>
           <h2 class="section-title">DFT & QED Calculations</h2>
-          <p style="color:hsl(220,15%,46%); line-height:1.7; margin-bottom:1.5rem;">Density Functional Theory and Quantum Electrodynamics calculations for precise electronic structure analysis. Apply DFT and quantum mechanical methods to model electronic structures and molecular interactions with precision.</p>
+          <p style="color:#000000; line-height:1.7; margin-bottom:1.5rem;">Density Functional Theory and Quantum Electrodynamics calculations for precise electronic structure analysis. Apply DFT and quantum mechanical methods to model electronic structures and molecular interactions with precision.</p>
           <a href="contact.html" class="btn-primary">Request This Service</a>
         </div>
         <div class="service-detail-visual">
@@ -65,7 +65,7 @@
         <div>
           <div class="section-label">Molecular Modeling</div>
           <h2 class="section-title">Quantum Molecular Modeling</h2>
-          <p style="color:hsl(220,15%,46%); line-height:1.7; margin-bottom:1.5rem;">High-fidelity molecular models using quantum chemistry methods for drug-target interactions. Leverage quantum mechanical calculations for accurate binding affinity predictions and lead optimization.</p>
+          <p style="color:#000000; line-height:1.7; margin-bottom:1.5rem;">High-fidelity molecular models using quantum chemistry methods for drug-target interactions. Leverage quantum mechanical calculations for accurate binding affinity predictions and lead optimization.</p>
           <a href="contact.html" class="btn-primary">Request This Service</a>
         </div>
         <div class="service-detail-visual">
@@ -87,7 +87,7 @@
         <div>
           <div class="section-label">Machine Learning</div>
           <h2 class="section-title">AI-Powered Modeling</h2>
-          <p style="color:hsl(220,15%,46%); line-height:1.7; margin-bottom:1.5rem;">Leverage machine learning for QSAR models, ADMET predictions, and virtual screening of compound libraries. Quantitative structure-activity relationship models enhanced with machine learning algorithms.</p>
+          <p style="color:#000000; line-height:1.7; margin-bottom:1.5rem;">Leverage machine learning for QSAR models, ADMET predictions, and virtual screening of compound libraries. Quantitative structure-activity relationship models enhanced with machine learning algorithms.</p>
           <a href="contact.html" class="btn-primary">Request This Service</a>
         </div>
         <div class="service-detail-visual">
@@ -109,7 +109,7 @@
         <div>
           <div class="section-label">ADMET</div>
           <h2 class="section-title">ADMET Predictions</h2>
-          <p style="color:hsl(220,15%,46%); line-height:1.7; margin-bottom:1.5rem;">In silico ADMET profiling using validated computational models for early-stage compound assessment. Predict absorption, distribution, metabolism, excretion, and toxicity early in your pipeline.</p>
+          <p style="color:#000000; line-height:1.7; margin-bottom:1.5rem;">In silico ADMET profiling using validated computational models for early-stage compound assessment. Predict absorption, distribution, metabolism, excretion, and toxicity early in your pipeline.</p>
           <a href="contact.html" class="btn-primary">Request This Service</a>
         </div>
         <div class="service-detail-visual">
@@ -131,7 +131,7 @@
         <div>
           <div class="section-label">Dynamics</div>
           <h2 class="section-title">Molecular Simulations</h2>
-          <p style="color:hsl(220,15%,46%); line-height:1.7; margin-bottom:1.5rem;">Molecular dynamics simulations to understand protein flexibility and binding thermodynamics. Discover novel allosteric binding sites through MD ensemble analysis.</p>
+          <p style="color:#000000; line-height:1.7; margin-bottom:1.5rem;">Molecular dynamics simulations to understand protein flexibility and binding thermodynamics. Discover novel allosteric binding sites through MD ensemble analysis.</p>
           <a href="contact.html" class="btn-primary">Request This Service</a>
         </div>
         <div class="service-detail-visual">
@@ -153,7 +153,7 @@
         <div>
           <div class="section-label">End-to-End</div>
           <h2 class="section-title">Custom Pipelines</h2>
-          <p style="color:hsl(220,15%,46%); line-height:1.7; margin-bottom:1.5rem;">Deliver comprehensive reports with prioritized compounds, optimization strategies, and clear recommendations. We build custom computational workflows tailored to your specific research objectives.</p>
+         <p style="color:#000000; line-height:1.7; margin-bottom:1.5rem;">Deliver comprehensive reports with prioritized compounds, optimization strategies, and clear recommendations. We build custom computational workflows tailored to your specific research objectives.</p>
           <a href="contact.html" class="btn-primary">Request This Service</a>
         </div>
         <div class="service-detail-visual">
